kubernetes/apps/default/it-tools/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: default
  labels:
    app: it-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      containers:
        - name: it-tools
          image: ghcr.io/corentinth/it-tools:2024.10.22-7ca5933
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
